--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hooks-window-size": "^0.2.2",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "superagent": "^5.3.1"
